Fixed era years being reset even if the occurring year was way behind

--- a/resources/sass/calendar/viewport.scss
+++ b/resources/sass/calendar/viewport.scss
@@ -545,6 +545,7 @@ body {
         justify-content: end;
         flex-direction: column;
         font-size:0.75rem;
+        text-align:left;
     }
 
 }
